refactor: Use `Collections.emptyMap()` over `Map.of()` for clarity and consistency
- Replaced instances of `Map.of()` with `Collections.emptyMap()` in `GraphWriter.java` and `IngestionOrchestrator.java`.
- Added `LAST_MODIFIED` constant to `Const.java` for improved code clarity.